@@ -124,6 +124,7 @@ enum master_query_type {
 	MASTER_NATIVE=0,
 	MASTER_GAMESPY,
 	MASTER_HTTP,
+	MASTER_LAN,
 	MASTER_NUM_QUERY_TYPES,
 	MASTER_INVALID_TYPE
 };
